grammar.txt
block := block_unit block
           | None

block_unit := statement
           | while_loop
           | if

statement := definition
          | expression ;

definition := type ID = expression

type := BUILTIN_TYPE

expression := assignference
           | STRING

assignference := ID
              | ID = expression

while_loop := WHILE OP expression CP OB block CB

if := IF OP expression CP OB block CB
